--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.74.1"
+    "@reduxjs/toolkit": "^2.2.5",
+    "react": "^18.2.0",
+    "react-native": "0.74.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,7 +24,7 @@
     "@react-native/eslint-config": "0.74.83",
     "@react-native/metro-config": "0.74.83",
     "@react-native/typescript-config": "0.74.83",
-    "@types/react": "^18.2.6",
+    "@types/react": "^18.3.2",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
